k8s/apps/proxmox-backup-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxmox-backup-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxmox-backup-webui
  template:
    metadata:
      labels:
        app: proxmox-backup-webui
    spec:
      containers:
        - name: proxmox-backup-webui
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: proxmox-backup-webui-conf
            - mountPath: /var/log/nginx
              name: log
      volumes:
        - name: proxmox-backup-webui-conf
          configMap:
            name: proxmox-backup-webui-conf
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: virtualhost.conf
                path: virtualhost/virtualhost.conf
        - name: log
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: proxmox-backup-webui
spec:
  selector:
    app: proxmox-backup-webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
